# Moneyball

./: .gitignore  Directory.Build.props  Moneyball.slnx  README.md
Moneyball.API/: Moneyball.API.csproj  Moneyball.API.http  Moneyball.API.slnx  Moneyball.slnx  Program.cs  ServiceCollectionExtensions.cs  ServiceProviderExtensions.cs  appsettings.json
Moneyball.Core/: Moneyball.Core.csproj
Moneyball.Data/: MoneyballDbContext.cs
Moneyball.Database/: Moneyball.Database.sqlproj  NBaPrediction.sql  NbaFeatureSet.sql  NbaGame.sql  NbaOdds.sql  NbaTeam.sql
Moneyball.Infrastructure/: Moneyball.Infrastructure.csproj
Moneyball.ML/: Moneyball.ML.csproj  Moneyball.ML.pyproj
Moneyball.ML.Python/: Moneyball.ML.Python.pyproj  README.md  app.py  prediction_service.py  pyproject.toml  requirements.txt  test_prediction_service.py
Moneyball.ML.Python/moneyball_ml_python/: __init__.py  app.py  prediction_service.py
Moneyball.ML.Python/moneyball_ml_python/data/: __init__.py  data_loader.py
Moneyball.ML.Python/moneyball_ml_python/prediction/: __init__.py  predict.py
Moneyball.ML.Python/moneyball_ml_python/training/: __init__.py  feature_engineering.py  model_config.py  model_trainer.py  train.py
Moneyball.ML.Python/moneyball_ml_python/utils/: __init__.py  edge_calculator.py
Moneyball.ML.Python/tests/: __init__.py  test_app.py  test_data_loader.py  test_feature_engineering.py  test_model_config.py  test_model_trainer.py  test_predict.py  test_prediction_service.py  test_train.py
Moneyball.Service/: BettingRecommendationService.cs  Moneyball.Service.csproj
Moneyball.Shared/: HomeOrAway.cs  Moneyball.Shared.csproj
Moneyball.Tests/: AssemblyInfo.cs  BettingRecommendationIntegrationTests.cs  GameRepositoryTests.cs  KellyCriterionCalculatorTests.cs  LocalFactAttribute.cs  Moneyball.Tests.csproj  MoneyballRepositoryTests.cs  OddsRepositoryTests.cs  RepositoryTests.cs  UnitTest1.cs
Moneyball.Worker/: DataIngestionBackgroundService.cs  Moneyball.Worker.csproj
(+191 files in other folders)
