[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyball-ml-python"
version = "0.1.0"
description = "Moneyball ML Python Service - Sports betting ML model server"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Genu Inc", email = "genuinc@gmail.com"}
]

# Runtime dependencies
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "xgboost>=1.7.6"
]

# Development/testing dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

# Console script entry point - makes app.py:main() callable via command
[project.scripts]
moneyball-ml = "moneyball_ml_python.app:main"

[tool.setuptools]
packages = ["moneyball_ml_python"]

[tool.coverage.run]
omit = [
    "*__init__.py",
    "tests/*"      # It's also common to exclude the tests themselves
]

[tool.coverage.report]
skip_empty = true  # Automatically hides __init__.py if they have no code
